2004-02-17  David Woodhouse  <dwmw2@redhat.com>

	* src/fs-ecos.c:
	Don't re-initialise the already-locked f->sem. It makes eCos unhappy. 

2004-01-27  David Woodhouse  <dwmw2@redhat.com>

	* src/write.c: 
	Fix bug noted by Howard Gray; dirents belong to, and should dirty, 
	the _parent_inode, not the child (which may be zero in the case 
	of an unlink).

004-01-05  Thomas Koeller  <thomas.koeller@baslerweb.com>

	* cdl/jffs2.cdl: Re-added CYGPKG_FS_JFFS2_CFLAGS_REMOVE that had been
	removed by previous change.
	
2003-11-26  David Woodhouse  <dwmw2@redhat.com>

	JFFS2 cleanup and import of newer code. Remove last vestiges of
	Linuxisms such as 'struct inode' from the core code, leaving eCos
	with no excuse, and renaming the eCos 'struct inode' to make that
	point. Fix i_count handling throughout. Clean up remaining Linuxisms
	such as 'struct qstr' to the point where jffs2port.h can be removed.
	Add skeleton for background garbage-collect thread. Fix compression
	so that it's actually called, and even with the right pointers. Turn
	on -Werror again. Zero tolerance is a good thing. Make the i_mode
	conversion functions non-inline to avoid warnings. Fix namespace
	pollution (of all but ^jffs2_* at least). Move physical flash I/O
	functions into separate file flashio.c for relatively easy
	substitution. Various other cruftectomy.

2003-11-25  Andrew Lunn  <andrew.lunn@ascom.ch>

	* src/fs-ecos.c: ARM gcc 3.2.3 is also broken. Complain with any
	ARM gcc 3.2 compiler.

2003-11-21  Thomas Koeller  <thomas.koeller@baslerweb.com>

        * cdl/jffs2.cdl: Do not require zlib package if no
	compression configured.

2003-11-20  Thomas Koeller  <thomas.koeller@baslerweb.com>

        * cdl/jffs2.cdl:
        * src/malloc-ecos.c:
        * src/fs-ecos.c: Allocate jffs2_raw_node_ref structs
        from pool or malloc depending on a CDL configuration.

2003-11-20  David Woodhouse <dwmw2@infradead.org>

        * Rearrangement of the compression code into a cleaner API