@@ -263,7 +263,8 @@ static int find_entry(jffs2_dirsearch * ds)
 	while (*n != '\0' && *n != '/')
 		n++, namelen++;
 
-	// If we terminated on a NUL, set last flag.
+	// Check if this is the last path element.
+	while( *n == '/') n++;
 	if (*n == '\0')
 		ds->last = true;
 
@@ -353,7 +354,7 @@ static int jffs2_find(jffs2_dirsearch * d)
 		// Update dirsearch object to search next directory.
 		d->dir = d->node;
 		d->path += d->namelen;
-		if (*(d->path) == '/')
+		while (*(d->path) == '/')
 			d->path++;	// skip dirname separators
 	}
 }
